# flash-scope

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-24-flash-scope-implementation.md
docs/superpowers/specs/: 2026-04-24-flash-scope-package-design.md
flash_scope/: __init__.py  _utils.py
flash_scope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flash_scope/io/: __init__.py  _anndata.py  _csv.py  _parquet.py
flash_scope/mcp/: __init__.py  __main__.py  _server.py
flash_scope/model/: __init__.py  _deconv.py  _init.py  _nb_params.py  _trainer.py
flash_scope/pp/: __init__.py  _preprocess.py
flash_scope/tl/: __init__.py  _deconvolve.py
rsc/: 2024-06-11-rapid-scope-dev.py
tests/: conftest.py  test_deconvolve.py  test_integration.py  test_io.py  test_mcp.py  test_model.py  test_nb_params.py  test_nnls_init.py  test_pp.py  test_trainer.py  test_utils.py
